--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = list(map(l))\n",
+    "names = list(map(lambda resteraunt))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
