--- a/index.ipynb
+++ b/index.ipynb
@@ -235,15 +235,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-554defdb468c>, line 2)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-8-2ecaa66aaf31>, line 10)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-554defdb468c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    names\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-2ecaa66aaf31>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    #  'Stripes Biscuit']\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
