--- a/index.ipynb
+++ b/index.ipynb
@@ -235,20 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-8-2ecaa66aaf31>, line 10)",
+     "evalue": "invalid syntax (<ipython-input-9-554defdb468c>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-2ecaa66aaf31>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    #  'Stripes Biscuit']\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-554defdb468c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    names\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "names = list(map(lambda resteraunt: dict(name=restaurant['name'],\n",
+    "names = list(map(lambda resteraunt: dict(name=restaurant['name']\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
