--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "review_counts = list(map(lambda resteraunt: dict(rev=restaurant['reveiw_counts']\n",
+    "review_counts = list(map(lambda resteraunt: dict(reveiw_count=restaurant['reveiw_counts']\n",
     "                                                 \n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
