--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "names = list(map(lambda resteraunt: dict(name=restaurant['name']\n",
+    "names = list(map(lambda resteraunt: dict(name=restaurant['name'], rsteraunt\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
