--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "review_counts = list(map(lambda resteraunt: dict(reveiw_count=restaurant['reveiw_count']\n",
+    "review_counts = list(map(lambda resteraunt: restaurant['reveiw_count'],\n",
     "                                                 \n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
