--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = Non\n",
+    "total_reviews = 0\n",
+    "    f\n",
     "total_reviews # 3420"
    ]
   },
