--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,7 @@
    "source": [
     "total_reviews = 0\n",
     "    for review_count in review_counts\n",
-    "    \n",
+    "    total\n",
     "total_reviews # 3420"
    ]
   },
