--- a/index.ipynb
+++ b/index.ipynb
@@ -307,13 +307,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-17-1bcddb0d95f9>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-1bcddb0d95f9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for review_count in review_counts\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "total_reviews = 0\n",
     "    for review_count in review_counts\n",
-    "    total_reviews += review_\n",
+    "    total_reviews += review_count\n",
     "total_reviews # 3420"
    ]
   },
