--- a/index.ipynb
+++ b/index.ipynb
@@ -383,6 +383,9 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
+    "     if type(restaurant['price']) == str:\n",
+    "        restaurant['price'] = len(restaurant['price'])\n",
+    "    return restaurant\n",
     "    pass"
    ]
   },
