--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    reutrn list(map(format))\n",
+    "    reutrn list(map(format_restaurants))\n",
     "    pass"
    ]
   },
