Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,8 +383,8 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    reutrn list(map(format_restaurants(restaura)))\n",
-    "    pass"
+    "    reutrn list(map(format_restaurants(restaurants)))\n",
+    "    "
    ]
   },
   {
