--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,7 @@
    ],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    reutrn list(map(format_restaurants(restaurants)))\n",
+    "    reutrn list(map(format_restaurants, restaurants)))\n",
     "    "
    ]
   },
