--- a/index.ipynb
+++ b/index.ipynb
@@ -378,21 +378,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-a4a034a23fdd>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-23-d904155abfd0>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-a4a034a23fdd>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    reutrn list(map(format_restaurants(restaurants)))\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-d904155abfd0>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    reutrn list(map(format_restaurants, restaurants))\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    reutrn list(map(format_restaurants, restaurants)))\n",
+    "    reutrn list(map(format_restaurants, restaurants))\n",
     "    "
    ]
   },
