Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -445,7 +445,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: re))\n",
+    "    return list(filter(lambda restaurant: restauran))\n",
     "    pass"
    ]
   },
