--- a/index.ipynb
+++ b/index.ipynb
@@ -445,7 +445,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_cl']))\n",
+    "    return list(filter(lambda restaurant: restaurant['is_closed'], ))\n",
     "    pass"
    ]
   },
