--- a/index.ipynb
+++ b/index.ipynb
@@ -440,12 +440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_closed'], ))\n",
+    "    return list(filter(lambda restaurant: restaurant['is_closed'], restaurants))\n",
     "    pass"
    ]
   },
