--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda))\n",
+    "    return list(filter(lambda restau))\n",
     "    pass"
    ]
   },
