--- a/index.ipynb
+++ b/index.ipynb
@@ -602,7 +602,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    \n",
+    "    return list\n",
     "    pass"
    ]
   },
